# WithGames

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
docs/: CICD.md  DEPLOYMENT.md  GCP_SETUP.md  SETUP.md  TROUBLESHOOTING.md
scripts/: deploy.sh  setup_gcp.sh  start_local.sh  sync_commands.py
src/: bot.py  config.py  healthcheck.py  main.py
src/cogs/: event_manager.py  notification_manager.py  participant_manager.py
src/models/: event.py  participant.py
src/services/: event_service.py  firestore_service.py  participant_service.py
src/ui/: buttons.py  colors.py  embeds.py  modals.py  selects.py
src/utils/: datetime_utils.py  formatters.py  game_data.py  permissions.py  validators.py
